# hyprdashboard-qt6

./: .gitignore  CMakeLists.txt  README.md  build.nix  de.inquies.hyprdash.yml  flake.nix  hyprdash.cpp  hyprdash.json.example  hyprdash.qml  hyprdash.sh  main.cpp
components/: ActionButton.qml  AppLauncher.qml  Box.qml  Clock.qml  Locations.qml  Mail.qml  Performance.qml  RssReader.qml  RssTabBar.qml  TileLauncher.qml  UpTime.qml  User.qml  Weather.qml  qmldir
config/: Settings.qml
include/config/: globals.h  settings.cpp  settings.h
include/processor/: processor.cpp  processor.h  worker.cpp  worker.h
include/socket/: client.cpp  client.h  imap.cpp  imap.h  server.cpp  server.h
js/: helpers.js  json2xml.js
resources/: style.css
